--- a/css/hero-slider.css
+++ b/css/hero-slider.css
@@ -185,7 +185,7 @@ Single slide style
 }
 .cd-hero-slider li:first-of-type {
   background-color: #ccc;
-  background-image: url("../images/main-banner/1/1.jpg");
+  background-image: url("../images/main-banner/1/become-rich.jpg");
 }
 .cd-hero-slider li:nth-of-type(2) {
   background-color: #ccc;
